docs/intelligent-troubleshooting/versions/v0.14/architecture-critique-v4.md
# 架构 v4 · 第一性原理评价与修订决议

> 状态：**已被用户认可，修订已落入 `rfcs/intelligent-troubleshooting-architecture-v4.md`（v4.3 / 蓝图 v0.14）**
>
> 评价对象：架构 v4（745 行）、架构师评审记录、录音产品基线、蓝图 v0.10，
> 以及 `SopSynthesisService` / `DeterministicLogTraceCompressor` 的实际代码。
>
> 与 `architecture-review-v4.md` 的分工：那份是**工程评审**（模块深度、依赖方向、测试、失败模式），
> 本文是**第一性原理评价**（这套结构是不是从公理来的，哪些是从模仿或预判来的）。

---

## 0. 总评

**结构正确，边界纪律是本项目历次版本里最好的一版；但有两处实质问题会伤到 v4 自己的价值主张，
一处度量装置缺失，一处机会缺口。**

| 判定 | 内容 |
|---|---|
| 保留 | 证据脊柱、双闭环、二维路由、模型只提议注册键、只读边界、fixture 诚实 |
| 必改 | 晋升资格封顶学习环（§2.1）、北极星无度量装置（§2.3） |
| 建议改 | 加负对照证据（§2.4）、红线表收敛到一处（§2.5） |
| 建议降级 | Loop Engineering 与多 Agent 反证标记为未生效设计（§2.2） |

---

## 1. v4 做对了什么（且是从公理来的，不是听着顺耳）

### 1.1 先固定事实再推架构，并且敢降级自己上一版的推论

`recording-product-baseline.md` 把 F1–F11 与"讨论过但没成为承诺"分开，并把五类 `FaultClass`
判为"后续设计推演，不是录音原始决策"。那五类是 v2 推出来的；**这次降级是对的**——录音只稳定
支持两种能力承诺（代码类只定位 / 数据业务类可给建议）。把自己上一版的推论标回"待真实样本验证"，
是第一性原理的实际执行，不是姿态。

### 1.2 `investigationMode` × `routeAuthority` 的二维分解

这是全篇最有价值的一处建模。v2 把零 LLM 边界从"整条路径"收敛到"判定链"，但仍把
"怎么查"和"为什么选中"压在一个字段里，前端就会把模型提议显示成"已命中"。v4 拆成两维，
是从"信任等级必须可见"这条公理直接推出来的。

### 1.3 §3.3「模型只提议注册键，不生成调查程序」

四道硬校验把"模型不能画地图，只能建议用哪张已审核的地图"落成了机器可检查的约束。
第一性上：**模型输出的类型决定了它能造成多大伤害**。把输出类型从自由文本/DQL 收窄到
"枚举 key + 参数候选"，伤害面按类型系统收敛，比在 prompt 里叮嘱强一个数量级。

### 1.4 文档与代码一致

已核对：`SopSynthesisService` 确实止步于模型之前（`FIXTURE_ONLY_SOURCES = {recorded-replay}`，
preview 不入库、不晋升），HANDOFF 的"尚未完成"清单诚实。在这个项目里这条比任何设计都重要。

---

## 2. 问题与决议

### 2.1 晋升资格表在契约层面否定了自己的价值主张 🔴 必改

**原文（§5.7）**：`EVIDENCE_DERIVED` 达到 `ELIGIBLE_FOR_APPROVAL` 需要
**人工参考解法 + 引用完整 + 正例回放 + 负例 + owner**。

**问题**：这里有个循环。系统的价值主张是把人从写 SOP 里解放出来（F1）。但这条要求
**每一条证据型草稿都先要有人把该故障排查完并写下来**，AI 草稿才可能变 approved ——
那 AI 省的是"写文档"的力气，不是"排查"的力气。**学习环的吞吐被人工参考解法的产出速度封顶**，
而 v4 自己把知识生产定义为一等闭环。

对**首个验收案例**这条完全正确：会议原话"生成的操作步骤跟你现在解决的方案是一样的"，
那是**验证手段**。问题在于把验证手段固化成了所有证据型草稿的**永久门槛**。

**决议（D5′，已写入 v4 §5.7）**：晋升资格按阶段分档。

| 阶段 | `EVIDENCE_DERIVED` 的最低证据 |
|---|---|
| **校准期**（P1–P2，默认，直到退出条件满足） | 人工参考解法 + 引用完整 + 正例回放 + 负例/弃权用例 + owner |
| **运行期**（P3+，满足退出条件后按 workspace 开启） | 引用完整 + 正例回放 + 负例/弃权用例 + owner + **结构化对照证据**；人工参考解法降为加分项 |

退出校准期的条件必须是数据，不是日期：**在 ≥20 条历史样本上，必需意图覆盖率与危险动作拦截率
达标，且高置信错误数为 0**。未达标就一直留在校准期。

`OUTCOME_BACKED` 不变（真实 outcome + 恢复验证本身就是比人工解法更强的证据）。

### 2.2 设计跑在验证前面 🟡 建议降级

当前真实跑通的是**两次取证 + 一次确定性压缩，全在 fixture 上**；`fixtureMode` 恒 true，
PS ID 是否全链路贯通尚未验证。而文档已包含三类路径、两层 SPI、Loop Engineering
（`LoopPolicy`/`LoopRun`/`LoopOutcome` + 7 种 stopReason）、多 Agent 对抗评测
（两个 Challenger + `AdversarialEvalReport` + `PROMOTION_GATE`）、十个深模块、13 条 D、
12 条 A、12 条红线。

v4 自己意识到了（§4 "目标边界不是本期类清单"，评审 A3），并用 P1 边界挡住了实现。
**但这个防御防的是实现，不防设计本身的引力**——写进 RFC 正文的结构会成为后来者的
"应该这样做"。

更关键的是：Loop Engineering 与多 Agent 反证要解决的问题（模型自行宣布完成、单模型自证）
都真实，但**它们的形状现在由预判决定，不由观测到的失败模式决定**。按 v4 自己的 A10
（replay 不能冒充真实验证）同理推一步：

> **没有被真实失败检验过的架构分支，也应该标 fixtureMode。**

**决议**：§4.2、§5.8、§5.9 保留原文与编号（避免 § 编号断裂），但各加
`状态：PENDING-EVIDENCE（未生效设计）` 状态条，明确"在 P2 真实样本给出失败模式之前，
不得据此新增实现、接口或数据库结构"。D12/D13 同步标注。

### 2.3 北极星定义正确，但没有度量装置 🔴 必改

**原文（§1.1）**："从一条不完整报障，到一个带证据、可交接、可复用的定位结论所需的时间。"

这个定义是对的——"可交接、可复用"堵住了"给个结论就算完"。但：

1. 全文没定义这个时间**从哪一刻起算**。企微 @ 的那条消息？还是 Intake READY？
   两者差着补问往返，而补问往返正是 F6 点名的最大时间坑之一。
2. §9.1 的性能预算测的是取证/压缩/模型/总时延——那是**机器时间**。系统内部 3 秒还是 8 秒，
   对"人少花多少时间"几乎没有影响；大头在补问往返、人看懂结论、交接给下一个人。

**结果：北极星盯的是人的时间，仪表盘量的是机器的时间。** 这两者会分叉。

这是**契约层面的遗漏**：`IntakeEnvelope` 只有 `receivedAt`，`Diagnosis` 只有 `createdAt`。

**决议（已写入 v4 §5.10）**：新增四个北极星时间戳，P1 起就记录（fixture 样本同样记）：

```text
reportedAt    报障第一条消息到达（企微 @ / Web 提交 / 告警投递）
readyAt       Intake 判定 READY，信息补齐完成      → reportedAt→readyAt = 补问成本
conclusionAt  产出可读结论或 abstain               → readyAt→conclusionAt = 系统调查成本
handoffAt     人确认 / 转派 / 关闭，结论离开系统   → conclusionAt→handoffAt = 人的采纳成本
```

三段差值必须分开统计，禁止只报总时长——否则无法判断该优化补问、调查还是呈现。

### 2.4 机会缺口：还没回答"AI 归纳凭什么比人写的强" 🟡 建议改

v4 用大量篇幅设计**如何防止 AI 出错**（校验、反证、Gate、审核、预算）。这是必要的，
但它只解决了"不比人差"，没解决"比人强在哪"。

差异化论断是 F1/A4：**我们有全量日志**。全量日志能做到人做不到的事，本质是**统计**——
人只能看一条 trace，系统可以看一万条。

但当前流水线是**单样本归纳**（一次报障 → 一条 PS ID → 一个骨架 → 一份草稿），
复制的是人的工作方式，只是更快。P2 那 20–30 条历史样本是拿来**评测**的，不是拿来**归纳**的。

**决议（已写入 v4 §6 与 §9.1）**：在 P1 的证据计划里增加第三次取证——
**同窗口同接口的成功样本对照（negative control）**。

- 成本：一次查询；
- 收益：判据从"这条链路里有个异常"升级为"失败请求里 92% 有该特征，成功请求里 3% 有"；
- **关键点**：这类判据天生是确定性的，落在 v4 自己的判定链纪律内，不需要模型背书；
- 对照取不到时**降级但不失败**：草稿仍可生成，但标记 `contrastAvailable=false`，
  且该草稿不得进入运行期晋升档（回落校准期规则）。

### 2.5 四张互相分叉的约束表 🟡 建议改

现行"事实"分散在 baseline / v4 / review-v4 / blueprint / TODO / HANDOFF 六处。已出现漂移：

| 位置 | 表 | 条数 |
|---|---|---|
| v4 §1.2 | 不可妥协约束 A1–A12 | 12 |
| v4 §9 | 红线 1–12 | 12 |
| HANDOFF §3 | 架构决定 D1–D13 | 13 |
| TODO §1 | 每个变更都要守的红线 | 9 |

内容高度重叠，条数、措辞、编号全不同。**这不是风格问题：「哪一份是权威」在事实上已经不唯一。**

**决议**：`v4 §9` 是红线的**唯一权威清单**。§1.2 保留为推导来源并注明权威在 §9；
TODO 与 HANDOFF 改为引用，不再复述条目。

---

## 2.6 补记：与平台融合的缺口（评价后复核发现）🔴 已修正

本文第一版**漏掉了这一条**，是在用户追问"这部分设计有融合当前 MateClaw 吗"之后逐包读源码才发现的。
记在这里，因为它说明一件事：**评价架构时只读设计文档不够，必须同时读平台已有什么。**

设计把企微当成需要新建的入站通道（v4 §12 P3 原文"企微群 @ 入站，PAT/签名校验和 workspace 身份映射"），
而平台早就自带：

```
vip.mate.channel.wecom.WeComChannelAdapter        3400+ 行，proactiveSend + 交互卡片
vip.mate.channel.wecom.cards.WeComCardDispatcher  多 kind 注册表（注释：Add lines here as new kinds land）
vip.mate.channel.ChannelMessage / ChannelSessionStore
```

而排障域**已经在飞书上正确做过卡片事件的隔离**（注册 `ts.` card kind，靠不相交前缀
与 tool-guard 隔离）；这只是模板卡片点击的例子，不是普通 @ 消息的入站接缝。
grep 全部 `docs/` 与 `rfcs/`：**0 处**提到这套设施。风险是 P3 会造出第二条入站路径。

顺带查出一个此前只在飞书侧记录、其实两边都存在的约束：`WeComCardRenderer` 与 `FeishuCardRenderer`
的签名都是 `render(ApprovalNotice)`，是 tool-guard 的形状，**且语义相反**
（批准=回放执行 vs 确认=只推进状态）。因此出站交互卡片必须先泛化平台接缝，
**严禁把 `BusinessSummary` 适配成 `ApprovalNotice`**。

**决议（D17，已写入 v4 §7.4）**：通道一律复用现有 `ChannelAdapter`；普通消息走
`ChannelMessageRouter` pre-route，模板卡片事件才走 `CardKind`，不新建入站。入站可先行，
出站卡片等接缝泛化，在此之前只发纯文本摘要。

## 3. 未采纳 / 保持原样

| 项 | 结论 |
|---|---|
| 三类调查路径 | 保持。它是从"触发方式不是知识身份"推出来的，不是枚举拍板 |
| 两层 SPI（Tool / Adapter） | 保持为**目标边界**。P4 前不实现，符合 §2.2 的处置 |
| `AWAITING_INPUT` 不进 `DiagnosisStateMachine` | 保持。未成形的报障不应污染已有处置不变量 |
| 五类 `FaultClass` | 保持降级状态，待真实样本验证 |
| 生产写四条红线 | 保持，不得以任何实现细节扩大 |

---

## 4. 本次修订清单（对 v4 的实际改动）

1. §5.7 晋升资格表 → 校准期 / 运行期两档（**D5′**，用户已明确认可）；
2. 新增 §5.10 北极星时间戳契约；
3. §6 流水线增加第 2.5 步"成功样本对照"，§9.1 预算表由 2 次取证改为 3 次（第三次可失败降级）；
4. §4.2 / §5.8 / §5.9 加 `PENDING-EVIDENCE` 状态条，D12 / D13 同步标注；
5. §9 声明为红线唯一权威清单；TODO / HANDOFF 改引用；
6. §13 增补 D5′，§0 增补本次修订索引。

**v4.2 追加（源码复核后）**：

7. 新增 §7.4 通道复用 + **D17**；§7.1 入口、§10 兼容迁移表、§12 P3 同步改为"扩现有通道"；
8. `projection-contracts.md` 增 §5「投影怎么被通道消费」，写明 renderer 形状约束。

**v4.3 追加（普通消息入站复核后）**：

9. 校正 §7.4 / D17：`CardKind` 只处理模板卡片事件；企微普通 @ 消息复用
   `WeComChannelAdapter → ChannelMessageRouter`，由显式启用的 pre-route handler 接管；
10. 锁定 IntakeSession 的不可信通道身份、provider event time、幂等/乱序/并发与 READY 释放边界，
    未完成的异步调查、Web 深链和关闭通知继续明确标注未完成。

修订后按版本纪律发布快照：v4.1 → **v0.11**，v4.2（通道复用）→ **v0.12**，
实现状态校准 → **v0.13**，v4.3（普通消息 IntakeSession）→ **v0.14**；
`versions/index.html` 与 `versions/README.md` 同步更新。
